# neo

./: .gitignore  Cargo.toml  blueprints.md  bms-ecs-architecture.md  design.md  env.sh  pnpm-workspace.yaml  run_neo.sh
bacnet-test-devices/: Dockerfile  docker-compose-bridge.yml  simple_device.py  virtual_ahu.py  virtual_all_devices.py  virtual_vav.py
bindings/bindings/: PointValue.ts  Schedule.ts  ScheduleException.ts  ServiceResponse.ts  ServiceState.ts  ServiceType.ts  Weekday.ts
crates/blueprint_macros/: Cargo.toml
crates/blueprint_macros/src/: blueprint_macros.rs
crates/blueprint_runtime/: Cargo.toml
crates/blueprint_runtime/src/: blueprint_js_runtime.rs  blueprint_runtime.rs  executor.rs  js_executor.rs  js_node_library.rs  registry.rs
crates/blueprint_runtime/src/service/: event.rs  handle.rs  manager.rs  mod.rs
crates/blueprint_server/: Cargo.toml
crates/blueprint_server/src/: blueprint_server.rs
crates/blueprint_types/: Cargo.toml
crates/blueprint_types/src/: behaviours.rs  blueprint_types.rs  exposed.rs  functions.rs  structs.rs  type_registry.rs  types.rs  value.rs  wasm.rs
crates/neo/: Cargo.toml
crates/neo-ecs/: Cargo.toml
crates/neo-ecs/src/: commands.rs  hierarchy.rs  lib.rs  registry.rs  world.rs
crates/neo-ecs/src/components/: bacnet.rs  behavior.rs  hvac.rs  mod.rs
crates/neo-js-runtime/: Cargo.toml
crates/neo-js-runtime/examples/: test_plugins.rs  test_runtime.rs
crates/neo-js-runtime/src/: bootstrap.js  command.rs  error.rs  handle.rs  lib.rs  mode.rs  ops.rs  services.rs  spawn.rs  types.rs  worker.rs
crates/neo-plugin-host/: Cargo.toml
crates/neo-plugin-host/src/: bootstrap.js  main.rs  ops.rs  runtime.rs
crates/neo/bindings/: AlarmRule.ts  AlarmRulesConfig.ts  BlueprintConfig.ts  ChangeType.ts  ClientMessage.ts  ConnectionConfig.ts  DaySchedule.ts  DeviceConfig.ts  DeviceInfo.ts  ErrorCode.ts  LocationConfig.ts  NodeEntry.ts  PluginManifest.ts  PluginRegistration.ts  PointConfig.ts  ProjectInfo.ts  ProjectManifest.ts  RuntimeConfig.ts  ScheduleConfig.ts  ScheduleInfo.ts  ServerMessage.ts  ServiceEntry.ts  TimeRange.ts  ZoneOverride.ts
crates/neo/bindings/bindings/: Alarm.ts  AlarmSeverity.ts  AlarmState.ts  HistorySample.ts  PointQuality.ts  ScheduleEntry.ts  ServiceRequest.ts
crates/neo/examples/: run_async_blueprint.rs  run_behaviour_example.rs  run_blueprint.rs  run_function_blueprint.rs  run_service_blueprint.rs  run_struct_example.rs  stress_test.rs
crates/neo/src/: lib.rs  main.rs  messages.rs  types.rs
crates/neo/src/actors/bacnet/: device.rs  io.rs  mod.rs  network.rs
crates/neo/src/bacnet/: mod.rs  service.rs  types.rs  worker.rs
crates/neo/src/blueprints/: executor.rs  mod.rs  registry.rs  service.rs  service_adapter.rs
crates/neo/src/bridges/: blueprint.rs  mod.rs  typescript.rs
crates/neo/src/ecs/: mod.rs  service.rs
crates/neo/src/engine/: executor.rs  mod.rs  nodes.rs
crates/neo/src/js/: globals.rs  mod.rs  runtime.rs  service.rs
crates/neo/src/plugin/: ipc.rs  js_service.rs  mod.rs  process_service.rs  supervisor.rs  v8_serde.rs
crates/neo/src/project/: config.rs  loader.rs  mod.rs  watcher.rs
crates/neo/src/protocols/: mod.rs
crates/neo/src/protocols/bacnet/: mod.rs
crates/neo/src/protocols/modbus/: mod.rs
crates/neo/src/server/: handler.rs  mod.rs  protocol.rs  router.rs  state.rs
crates/neo/src/services/: actor.rs  messages.rs  registry.rs
crates/neo/src/services/builtin/: alarm.rs  history.rs
crates/neo/src/services/plugin/: loader.rs  mod.rs  ops.rs  pool.rs
crates/neo/src/storage/: mod.rs
create-neo-plugin/: index.js  package.json
create-neo-plugin/templates/javascript/src/: index.js
create-neo-plugin/templates/typescript/: package.json  tsconfig.json
create-neo-plugin/templates/typescript/src/: index.ts
data/behaviours/: controllable.behaviour.json
data/blueprints/: example-async-sequence.json  example-service-monitor.json  example-simple-log.json  example-temperature-alert.json  example-with-functions.json
data/structs/: vav-device.struct.json
docs/: BLUEPRINT_PLAN.md
docs/plans/: service-abstraction-plan.md
examples/: run_async_blueprint.rs  run_blueprint.rs  run_function_blueprint.rs  run_service_blueprint.rs
neo/: README.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json  tsconfig.web.json  vite.config.js
neo/src/main/: index.ts
neo/src/main/extensionHost/: ExtensionDevServer.ts  ExtensionHostMain.ts  ExtensionHostProcess.ts  ExtensionScanner.ts  extHost.protocol.ts  index.ts  protocol.ts
neo/src/main/services/: LayoutService.ts  ThemeService.ts  WebSocketService.ts
neo/src/preload/: index.d.ts  index.ts
neo/src/renderer/src/: App.svelte  (+1 more)
neo/themes/: neo-dark.json  neo-light.json  theme.schema.json
plugins/random-service/: neo-plugin.json
plugins/random-service/src/: index.js
plugins/sdk/: package.json
plugins/sdk/src/: helpers.js  index.ts
plugins/weather-service/: neo-plugin.json
plugins/weather-service/src/: index.js  index.ts
project/: project.toml
project/blueprints/: plugin-test.bp.json  temp-control.bp.json
project/devices/: vav-101.device.toml
project/plugins/example/: index.js  neo-plugin.json  neo.d.ts  package.json  tsconfig.json  vite.config.ts
project/plugins/example2/: index.js  neo-plugin.json
project/schedules/: hvac-schedule.schedule.toml
src/: lib.rs  main.rs  messages.rs  types.rs
src/actors/: mod.rs  pubsub.rs  station.rs
src/actors/bacnet/: device.rs  io.rs  mod.rs  network.rs  point.rs
src/actors/modbus/: mod.rs
src/actors/services/: event_router.rs  mod.rs
src/api/: mod.rs
src/blueprints/: behaviours.rs  executor.rs  functions.rs  mod.rs  registry.rs  service.rs  service_adapter.rs  structs.rs  types.rs
src/config/: mod.rs
src/services/: messages.rs  mod.rs
src/services/builtin/: history.rs  mod.rs
src/services/plugin/: actor.rs  ops.rs  runtime.js  service.rs
templates/plugin-template/: neo.d.ts  package.json  tsconfig.json  vite.config.ts
templates/plugin-template/src/: index.ts
(+123 files in other folders)
