[package]
name = "neo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Actor system
kameo = "0.19.1"
tokio = { version = "1.40", features = ["full"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Protocols
tokio-modbus = "0.14"
bytes = "1.7"

# Web API & WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
redb = "2.1"

# Configuration
config = "0.14"
figment = { version = "0.10", features = ["toml", "env"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
dashmap = "6.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
wildmatch = "2.3"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
