[package]
name = "neo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Actor system
kameo = "0.19.1"
kameo_actors = "0.4.0"
tokio = { version = "1.40", features = ["full"] }

# BACnet protocol
bacnet = { git = "https://github.com/Green-Mod/bacnet-stack-rs", package = "bacnet" }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Protocols
tokio-modbus = "0.14"
bytes = "1.7"

# Web API & WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
redb = "2.1"

# Configuration
config = "0.14"
figment = { version = "0.10", features = ["toml", "env"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
dashmap = "6.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
wildmatch = "2.3"
rand = "0.8"
parking_lot = "0.12"

# TypeScript type generation
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl", "serde-json-impl"] }

# Deno runtime for JS/TS plugins
deno_core = "0.311"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
