[workspace]
resolver = "2"
members = [
  "crates/neo",
  "crates/neo-js-runtime",
  "crates/blueprint_types",
  "crates/blueprint_runtime",
]
default-members = ["crates/neo"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
# Internal crates
blueprint_types = { path = "crates/blueprint_types" }
blueprint_runtime = { path = "crates/blueprint_runtime" }
neo-js-runtime = { path = "crates/neo-js-runtime" }

tokio = { version = "1.40", features = ["full"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Proc macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# WASM
wasm-bindgen = "0.2"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
notify = { version = "6.1", default-features = false, features = [
  "macos_kqueue",
] }
dashmap = "6.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
wildmatch = "2.3"
rand = "0.8"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# Testing
tokio-test = "0.4"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
