[package]
name = "blueprint_runtime"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
path = "src/blueprint_runtime.rs"
doctest = false

[dependencies]
neo-js-runtime.workspace = true

serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
rand.workspace = true
tokio.workspace = true
dashmap.workspace = true
thiserror.workspace = true
