[package]
name = "blueprint_server"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
path = "src/blueprint_server.rs"
doctest = false

[dependencies]
blueprint_types.workspace = true
blueprint_runtime.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
kameo.workspace = true
tracing.workspace = true
notify.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
