[package]
name = "neo-js-runtime"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
deno_core = "0.311"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

[dev-dependencies]
tracing-subscriber = { workspace = true }
