[package]
name = "neo-plugin-host"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "neo-plugin-host"
path = "src/main.rs"

[dependencies]
deno_core = "0.311"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
