[package]
name = "neo"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "neo"
path = "src/main.rs"

[dependencies]
# Internal blueprint crates
blueprint_types.workspace = true
blueprint_macros.workspace = true
blueprint_runtime.workspace = true
blueprint_server.workspace = true

# Actor system
kameo.workspace = true
kameo_actors.workspace = true
tokio.workspace = true

# BACnet protocol
bacnet = { git = "https://github.com/Green-Mod/bacnet-stack-rs", package = "bacnet" }

# Async utilities
futures.workspace = true
async-trait.workspace = true

# Protocols
tokio-modbus = "0.14"
bytes = "1.7"

# Web API & WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Database
redb = "2.1"

# Configuration
config = "0.14"
figment = { version = "0.10", features = ["toml", "env"] }

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# Utilities
thiserror.workspace = true
anyhow.workspace = true
notify.workspace = true
dashmap.workspace = true
uuid.workspace = true
wildmatch.workspace = true
rand.workspace = true
parking_lot.workspace = true

# TypeScript type generation
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl", "serde-json-impl"] }

# Deno runtime for JS/TS plugins
deno_core = "0.311"

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
